--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,1 @@
-version: '3.8'
-
-services:
-  # PostgreSQL база данных
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_DB: todoapp
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./database/migrations:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # Go приложение
-  app:
-    build: .
-    ports:
-      - "7540:8080"
-    environment:
-      APP_PORT: 8080
-      PG_HOST: postgres
-      PG_PORT: 5432
-      PG_USER: postgres
-      PG_PASS: ${POSTGRES_PASSWORD:-1234}
-      PG_DB: todoapp
-      PG_SSLMODE: disable
-      JWT_SECRET: ${JWT_SECRET:-1xFZvo0uC9wi6wcy35yuai3eG2nt5ngR8zB56dwpczc=}
-      ADMIN_TOKEN: ${ADMIN_TOKEN:-admin_12345_secret}
-      SMTP_HOST: smtp.gmail.com
-      SMTP_PORT: 587
-      SMTP_USER: ${SMTP_USER:-test.t0d0.dimash@gmail.com}
-      SMTP_PASS: ${SMTP_PASS:-nres wobi oouf ecvb}
-      SMTP_FROM: ${SMTP_FROM:-test.t0d0.dimash@gmail.com}
-      APP_BASE_URL: ${APP_BASE_URL:-http://localhost:7540}
-      LOGIN_MAX_FAIL: 4
-    depends_on:
-      postgres:
-        condition: service_healthy
-    restart: unless-stopped
-
-volumes:
-  postgres_data:
+public/docker-compose.yml
